@@ -5,6 +5,8 @@
 
 use I18N::Charset;
 
+$I18N::Charset::verbose = $I18N::Charset::verbose = 1;
+
 #-----------------------------------------------------------------------
 # This is an array of tests. Each test is eval'd as an expression.
 # If it evaluates to FALSE, then "not ok N" is printed for the test,
